feat: support task manager for java core